# RosettaStone

./: CMakeLists.txt  README.md  setup.py
Documents/: CardList.md
Extensions/RosettaBG/: CMakeLists.txt  README.md
Extensions/RosettaBG/Documents/: HeroList.md
Extensions/RosettaBG/Includes/BGGames/: BGGame.hpp  BGPlayer.hpp
Extensions/RosettaBG/Sources/: main.cpp
Extensions/RosettaBG/Sources/BGGames/: BGGame.cpp  BGPlayer.cpp
Extensions/RosettaBattlegrounds/Documents/: AbilityList.md  CardList.md
Extensions/RosettaBattlegrounds/Sources/: main.cpp
Extensions/RosettaBattlegrounds/Sources/Games/: Game.cpp
Sources/Rosetta/Actions/: Choose.cpp
Sources/Rosetta/CardSets/: UldumCardsGen.cpp
Sources/Rosetta/Managers/: CardDataManager.cpp
Tests/UnitTests/Actions/: ActionChoicesTests.cpp
Tests/UnitTests/CardSets/: Expert1CardsGenTests.cpp  UldumCardsGenTests.cpp
Tests/UnitTests/Commons/: DeckCodeTests.cpp
Tests/UnitTests/Views/: ReducedBoardViewTests.cpp
